# Database2

./: README.md
Database2/: CMakeLists.txt  DataBase.h  add_dialog.cpp  add_dialog.h  dialog.cpp  mainwindow.cpp  mainwindow.ui  pomocne.h
Database2/database/: Adress.cpp  Adress.h  CMakeLists.txt  DataBase.cpp  DataBase.h  Person.cpp  Person.h
Database2/gui/: CMakeLists.txt  add_dialog.ui  dialog.h  dialog.ui  mainwindow.h
